Add Dakota to bib

--- a/prelim/bibliography.bib
+++ b/prelim/bibliography.bib
@@ -1,7 +1,11 @@
 % MCNP
 @manual{mcnp620,
     title     = {MCNP Version 6.2 Release Notes},
-    author    = {Werner, Christopher John and Bull, Jeffrey S. and Solomon, C. J. and Brown, Forrest B. and McKinney, Gregg Walter and Rising, Michael Evan and Dixon, David A. and Martz, Roger Lee and Hughes, Henry G. and Cox, Lawrence James and Zukaitis, Anthony J. and Armstrong, J. C. and Forster, Robert Arthur and Casswell, Laura},
+    author    = {Christopher John Werner and Jeffrey S. Bull and C. J. Solomon
+                 and Forrest B. Brown and Gregg Walter McKinney and Michael Evan
+                 Rising and David A. Dixon and Roger Lee Martz and Henry G.
+                 Hughes and Lawrence James Cox and Anthony J. Zukaitis and J. C.
+                 Armstrong and Robert Arthur Forster and Laura Casswell},
     doi       = {10.2172/1419730},
     place     = {United States},
     year      = {2018},
@@ -21,8 +25,11 @@
 
 % ADVANTG
 @manual{advantg,
-    title     = {ADVANTG -- An Automated Variance Reduction Parameter Generator},
-    author    = {Scott W. Mosher and Seth R. Johnson and Aaron M. Bevill and Ahmad M. Ibrahim and Charles R. Daily and Thomas M. Evans and John C. Wagner and Jeffrey O. Johnson and Robert E. Grove},
+    title     = {ADVANTG -- An Automated Variance Reduction Parameter
+                 Generator},
+    author    = {Scott W. Mosher and Seth R. Johnson and Aaron M. Bevill and
+                 Ahmad M. Ibrahim and Charles R. Daily and Thomas M. Evans and
+                 John C. Wagner and Jeffrey O. Johnson and Robert E. Grove},
     year      = {2015},
     month     = {August},
     publisher = {Oak Ridge National Laboratory},
@@ -41,12 +48,20 @@
 
 % VisIT
 @incollection{visit,
-    author    = {Hank Childs and Eric Brugger and Brad Whitlock and Jeremy Meredith and Sean Ahern and David Pugmire and Kathleen Biagas and Mark Miller and Cyrus Harrison and Gunther H. Weber and Hari Krishnan and Thomas Fogal and Allen Sanderson and Christoph Garth and E. Wes Bethel and David Camp and Oliver R\"{u}bel and Marc Durant and Jean M. Favre and Paul Navr\'{a}til},
-    title     = {VisIt: An End-User Tool For Visualizing and Analyzing Very Large Data},
+    author    = {Hank Childs and Eric Brugger and Brad Whitlock and Jeremy
+                 Meredith and Sean Ahern and David Pugmire and Kathleen Biagas
+                 and Mark Miller and Cyrus Harrison and Gunther H. Weber and
+                 Hari Krishnan and Thomas Fogal and Allen Sanderson and
+                 Christoph Garth and E. Wes Bethel and David Camp and Oliver
+                 R\"{u}bel and Marc Durant and Jean M. Favre and Paul
+                 Navr\'{a}til},
+    title     = {VisIt: An End-User Tool For Visualizing and Analyzing Very
+                 Large Data},
     year      = {2012},
     pages     = {357-372},
     month     = {October},
-    booktitle = {High Performance Visualization -- Enabling Extreme-Scale Scientific Insight},
+    booktitle = {High Performance Visualization -- Enabling Extreme-Scale
+                 Scientific Insight},
     publisher = {Lawrence Livermore National Laboratory}
 }
 
@@ -67,18 +82,39 @@
     pages     = {181-268},
     year      = {1976},
     isbn      = {978-0-12-029309-4},
-    doi       = {https://doi.org/10.1016/B978-0-12-029309-4.50011-8},
+    doi       = {10.1016/B978-0-12-029309-4.50011-8},
     url       = {http://www.sciencedirect.com/science/article/pii/B9780120293094500118},
     author    = {Ehud Greenspan}
 }
 
 % FW-CADIS
 @article{fwcadis,
-    title     = {FW-CADIS Method for Global and Semi-Global Variance Reduction of Monte Carlo Radiation Transport Calculations},
+    title     = {FW-CADIS Method for Global and Semi-Global Variance Reduction
+                 of Monte Carlo Radiation Transport Calculations},
     author    = {John C. Wagner and Douglas E. Peplow and Scott W. Mosher},
     journal   = {Nuclear Science and Engineering},
     volume    = {176},
-    place     = {United States},
+    number    = {1},
+    pages     = {37-57},
     year      = {2014},
-    month     = {1}
+    publisher = {Taylor & Francis},
+    doi       = {10.13182/NSE12-33},
+    url       = {https://www.tandfonline.com/doi/abs/10.13182/NSE12-33}
+}
+
+% Dakota
+@manual{dakota,
+    title     = {Dakota, A Multilevel Parallel Object-Oriented Framework for
+                 Design Optimization, Parameter Estimation, Uncertainty
+                 Quantification, and Sensitivity Analysis: Version 6.10 User’s
+                 Manual},
+    author    = {Brian M. Adams and Michael S. Eldred and Gianluca Geraci and
+                 Russell W. Hooper and John D. Jakeman and Kathryn A. Maupin and
+                 Jason A. Monschke and Ahmad A. Rushdi and J. Adam Stephens and
+                 Laura P. Swiler and Timothy M. Wildey},
+    year      = {2019},
+    month     = {May},
+    publisher = {Sandia National Laboratories},
+    number    = {SAND2014-4633},
+    url       = {https://dakota.sandia.gov/sites/default/files/docs/6.10/Users-6.10.0.pdf}
 }
